Fixes flex bug on iPhone

--- a/style/less/responsive.less
+++ b/style/less/responsive.less
@@ -179,6 +179,7 @@
 
 		&:checked {
 			~ .menu {
+				pointer-events: auto;
 				.transform(translate3d(-100vw, 0, 0));
 				.transition(transform 1.4s 200ms @cubic);
 
@@ -243,7 +244,6 @@
 	}
 
 	.menu {
-		flex-direction: column;
 		position: fixed;
 		z-index: 50;
 		left: 100vw;
@@ -253,6 +253,7 @@
 		margin: 0;
 		padding: 10vh 20vw;
 		background: @base-color;
+		pointer-events: none;
 		will-change: transform;
 		.transition(transform 1.1s 700ms @cubic);
 
@@ -317,10 +318,8 @@
 			font-size: 40px;
 			.no-highlight();
 
-			ul {
-				flex-direction: row;
-				display: flex;
-				margin: 0;
+			ul li {
+				display: inline-block;
 			}
 		}
 
